<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dater Creater</string>

    <string name="contribs">Contributors</string>

    <string name="description">The Dater Creator app idea is to give users a way to organize and find date ideas for you and your special someone. You will have the app to specify certain parameters (Amount of money willing to spend, time you have, temperature, level of physical activity) to give the user a realistic date idea.</string>
    <string name="logomakr">Logo Editor</string>
    <string name="logoCredit">We created the logo and icons for Dater Creater using the free tools at <a href="logomakr.com">logomakr.com</a></string>
    <string name="winter2018">Winter 2018</string>

    <string name="quick">Quick Start</string>
    <string name="random">Random</string>
    <string name="custom">Custom</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="search_hint">Search a Date</string>
    <string name="about">About</string>

    <string name="spring">Spring</string>
    <string name="winter">Winter</string>
    <string name="fall">Fall</string>
    <string name="summer">Summer</string>
    <string name="inside">Inside</string>
    <string name="outside">Outside</string>
    <string name="season">Season</string>
    <string name="season2">Choose a season:</string>

    <string name="temp">Temperature</string>
    <string name="size">Group size</string>

    <string name="venue">Venue</string>
    <string name="price">Price</string>
    <string name="moneyOne">$</string>
    <string name="moneyTwo">$$</string>
    <string name="moneyThree">$$$</string>

    <string name="MainMenu">Main Menu</string>
    <string name="dates">Dates</string>
    <string name="filter">Filter</string>
    <string name="add">Add a Date</string>
    <string name="imageAttribute">Watercolors Background</string>
    <string name="Results">Results</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
</resources>
