<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/imageAttribute"
		android:scaleType="centerCrop"
		android:src="@drawable/watercolor2"/>

	<TextView
		android:id="@+id/welcome"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/filter"
		android:textColor="#ECF0F1"
		android:textSize="45sp"
		app:layout_constraintBottom_toTopOf="@+id/season"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/season"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/season"
		android:textAlignment="center"
		android:textColor="#ECF0F1"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/winter"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/welcome"/>

	<Button
		android:id="@+id/winter"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/winter"
		app:layout_constraintBottom_toTopOf="@+id/venue"
		app:layout_constraintEnd_toStartOf="@+id/spring"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/season"/>

	<Button
		android:id="@+id/spring"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/spring"
		app:layout_constraintBottom_toBottomOf="@+id/winter"
		app:layout_constraintEnd_toStartOf="@+id/summer"
		app:layout_constraintStart_toEndOf="@+id/winter"
		app:layout_constraintTop_toTopOf="@+id/winter"/>

	<Button
		android:id="@+id/summer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/summer"
		app:layout_constraintBottom_toBottomOf="@+id/winter"
		app:layout_constraintEnd_toStartOf="@+id/fall"
		app:layout_constraintStart_toEndOf="@+id/spring"
		app:layout_constraintTop_toTopOf="@+id/winter"/>

	<Button
		android:id="@+id/fall"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/fall"
		app:layout_constraintBottom_toBottomOf="@+id/winter"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/summer"
		app:layout_constraintTop_toTopOf="@+id/winter"/>

	<TextView
		android:id="@+id/venue"
		android:layout_width="98dp"
		android:layout_height="36dp"
		android:layout_marginTop="20dp"
		android:text="@string/venue"
		android:textColor="#ECF0F1"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/insideBtn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/winter"/>

	<Button
		android:id="@+id/insideBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="60dp"
		android:text="@string/inside"
		app:layout_constraintBottom_toTopOf="@+id/price"
		app:layout_constraintEnd_toStartOf="@+id/outsideBtn"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/venue"/>

	<Button
		android:id="@+id/outsideBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="60dp"
		android:text="@string/outside"
		app:layout_constraintBottom_toBottomOf="@+id/insideBtn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/insideBtn"
		app:layout_constraintTop_toTopOf="@+id/insideBtn"/>

	<TextView
		android:id="@+id/price"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/price"
		android:textColor="#ECF0F1"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/value1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/insideBtn"/>

	<Button
		android:id="@+id/value1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/moneyOne"
		app:layout_constraintBottom_toTopOf="@+id/size"
		app:layout_constraintEnd_toStartOf="@+id/value2"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/price"/>

	<Button
		android:id="@+id/value2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/moneyTwo"
		app:layout_constraintBottom_toBottomOf="@+id/value1"
		app:layout_constraintEnd_toStartOf="@+id/value3"
		app:layout_constraintStart_toEndOf="@+id/value1"
		app:layout_constraintTop_toTopOf="@+id/value1"/>

	<Button
		android:id="@+id/value3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/moneyThree"
		app:layout_constraintBottom_toBottomOf="@+id/value1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/value2"
		app:layout_constraintTop_toTopOf="@+id/value1"/>

	<TextView
		android:id="@+id/size"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/size"
		android:textColor="#ECF0F1"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/seekBar4"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/value1"/>

	<SeekBar
		android:id="@+id/seekBar4"
		style="@style/Widget.AppCompat.SeekBar.Discrete"
		android:layout_width="221dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginTop="8dp"
		android:max="10"
		android:progress="3"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/size"/>
</android.support.constraint.ConstraintLayout>
