<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/txtChoose"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/season2"
		android:textSize="24sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<Button
		android:id="@+id/button5"
		android:layout_width="174dp"
		android:layout_height="93dp"
		android:alpha="0.9"
		android:background="@drawable/winter"
		android:text="@string/winter"
		android:textColor="#f8f8f8"
		app:layout_constraintBottom_toTopOf="@+id/button6"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txtChoose"/>

	<Button
		android:id="@+id/button6"
		android:layout_width="174dp"
		android:layout_height="93dp"
		android:alpha="0.9"
		android:background="@drawable/spring"
		android:text="@string/spring"
		android:textColor="#f8f8f8"
		app:layout_constraintBottom_toTopOf="@+id/button7"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button5"/>

	<Button
		android:id="@+id/button7"
		android:layout_width="174dp"
		android:layout_height="93dp"
		android:alpha="0.9"
		android:background="@drawable/summer"
		android:text="@string/summer"
		android:textColor="#f8f8f8"
		app:layout_constraintBottom_toTopOf="@+id/button8"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button6"/>

	<Button
		android:id="@+id/button8"
		android:layout_width="174dp"
		android:layout_height="93dp"
		android:alpha="0.9"
		android:background="@drawable/fall"
		android:text="@string/fall"
		android:textColor="#f8f8f8"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button7"/>
</android.support.constraint.ConstraintLayout>
