<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="5dp"
		android:layout_marginStart="5dp"
		android:orientation="vertical">

		<TextView
			android:id="@+id/txtVersion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/description"
			android:textSize="15sp"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/logomakr"
			android:textSize="18sp"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/logoCredit"
			android:textSize="15sp"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp">

			<TextView
				android:id="@+id/lblContribs"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:text="@string/contribs"
				android:textSize="18sp"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/lblWinter2018"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignEnd="@+id/lblWinter2018B"
				android:layout_alignParentStart="true"
				android:layout_below="@+id/lblContribs"
				android:text="@string/winter2018"
				android:textAlignment="center"
				android:textSize="15sp"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/lblWinter2018A"
				style="@style/Contributors"
				android:layout_alignParentStart="true"
				android:layout_below="@+id/lblWinter2018"
				android:text="@string/contribsWinter2018A"/>

			<TextView
				android:id="@+id/lblWinter2018B"
				style="@style/Contributors"
				android:layout_alignBaseline="@+id/lblWinter2018A"
				android:layout_marginStart="5dp"
				android:layout_toEndOf="@+id/lblWinter2018A"
				android:text="@string/contribsWinter2018B"/>
		</RelativeLayout>
	</LinearLayout>
</ScrollView>
