<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/imageAttribute"
		android:scaleType="centerCrop"
		android:src="@drawable/watercolor"/>
	<!--
		<SearchView
			android:id="@+id/searchView"
			android:layout_width="351dp"
			android:layout_height="27dp"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.529"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.0"/>
	-->
	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="42dp"
		android:text="@string/Results"
		android:textColor="#F8F8F7"
		android:textSize="32sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<Button
		android:id="@+id/dateBtn"
		android:layout_width="280dp"
		android:layout_height="140dp"
		android:gravity="center|bottom"
		android:paddingBottom="18dp"
		android:text="@string/first"
		android:textSize="13sp"
		app:layout_constraintBottom_toTopOf="@+id/filterBtn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/title"/>

	<Button
		android:id="@+id/filterBtn"
		android:layout_width="140dp"
		android:layout_height="140dp"
		android:gravity="center|bottom"
		android:paddingBottom="18dp"
		android:text="@string/second"
		android:textSize="13sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/addBtn"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dateBtn"/>

	<Button
		android:id="@+id/addBtn"
		android:layout_width="140dp"
		android:layout_height="140dp"
		android:gravity="center|bottom"
		android:paddingBottom="18dp"
		android:text="@string/third"
		android:textSize="13sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/filterBtn"
		app:layout_constraintTop_toBottomOf="@+id/dateBtn"/>
</android.support.constraint.ConstraintLayout>
