<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/venue"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/radioButton"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<RadioButton
		android:id="@+id/radioButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/outside"
		app:layout_constraintBottom_toTopOf="@+id/radioButton2"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4"/>

	<RadioButton
		android:id="@+id/radioButton2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="150dp"
		android:text="@string/inside"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/radioButton"/>
</android.support.constraint.ConstraintLayout>
