<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/waterring">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp">

		<!--
				<ImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:scaleType="centerCrop"
					android:src="@drawable/ios"
					android:adjustViewBounds="true"
					android:contentDescription="@string/imageAttribute"/>
		-->

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Add a New Date"
			android:textAppearance="@style/TextAppearance.AppCompat.Display1"
			android:textSize="24sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toTopOf="@+id/nameEdit"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Name:"
			android:textAppearance="@style/TextAppearance.AppCompat.Display1"
			android:textColor="#f8f8f8"
			android:textSize="14sp"
			android:textStyle="bold"
			app:layout_constraintBaseline_toBaselineOf="@id/nameEdit"
			app:layout_constraintStart_toStartOf="parent"/>

		<EditText
			android:id="@+id/nameEdit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPersonName"
			android:textSize="14sp"
			app:layout_constraintBottom_toTopOf="@+id/costEdit"
			app:layout_constraintStart_toEndOf="@id/name"
			app:layout_constraintTop_toBottomOf="@+id/title">

			<requestFocus/>
		</EditText>

		<TextView
			android:id="@+id/cost"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Cost:"
			android:textAppearance="@style/TextAppearance.AppCompat.Display2"
			android:textColor="#f8f8f8"
			android:textSize="14sp"
			android:textStyle="bold"
			app:layout_constraintBaseline_toBaselineOf="@id/costEdit"
			app:layout_constraintStart_toStartOf="parent"/>


		<EditText
			android:id="@+id/costEdit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="5"
			android:inputType="numberDecimal"
			app:layout_constraintBottom_toTopOf="@+id/timeSeek"
			app:layout_constraintStart_toEndOf="@id/cost"
			app:layout_constraintTop_toBottomOf="@+id/nameEdit"/>

		<TextView
			android:id="@+id/time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Time:"
			android:textAppearance="@style/TextAppearance.AppCompat.Display2"
			android:textColor="#f8f8f8"
			android:textSize="14sp"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@id/timeSeek"/>

		<SeekBar
			android:id="@+id/timeSeek"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			app:layout_constraintBottom_toTopOf="@+id/groupSeek"
			app:layout_constraintStart_toEndOf="@id/time"
			app:layout_constraintTop_toBottomOf="@+id/costEdit"/>

		<TextView
			android:id="@+id/group"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Group Size:"
			android:textAppearance="@style/TextAppearance.AppCompat.Display2"
			android:textColor="#f8f8f8"
			android:textSize="14sp"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@id/groupSeek"/>

		<SeekBar
			android:id="@+id/groupSeek"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			app:layout_constraintBottom_toTopOf="@+id/Weather"
			app:layout_constraintStart_toEndOf="@id/group"
			app:layout_constraintTop_toBottomOf="@+id/timeSeek"/>

		<TextView
			android:id="@+id/Weather"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:text="Season:"
			android:textAppearance="@style/TextAppearance.AppCompat.Display2"
			android:textColor="#f8f8f8"
			android:textSize="14sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toTopOf="@+id/weatherBar"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/groupSeek"/>

		<RadioGroup
			android:id="@+id/weatherBar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintBottom_toTopOf="@+id/description"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/Weather">

			<RadioButton
				android:id="@+id/winter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/winter"
				android:textColor="#f8f8f8"/>

			<RadioButton
				android:id="@+id/spring"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/spring"
				android:textColor="#f8f8f8"/>

			<RadioButton
				android:id="@+id/summer"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/summer"
				android:textColor="#f8f8f8"/>

			<RadioButton
				android:id="@+id/fall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/fall"
				android:textColor="#f8f8f8"/>
		</RadioGroup>

		<TextView
			android:id="@+id/description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:text="Description:"
			android:textAppearance="@style/TextAppearance.AppCompat.Display2"
			android:textColor="#f8f8f8"
			android:textSize="14sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toTopOf="@+id/editDesc"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/weatherBar"/>

		<EditText
			android:id="@+id/editDesc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:ems="10"
			android:inputType="textMultiLine"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/description"/>
	</android.support.constraint.ConstraintLayout>
</ScrollView>
